--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Max’s Precious Minerals | Heavy Machinery & Mining</title>
 
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
-
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="assets/style/style.css">
@@ -36,12 +35,11 @@
     <main>
         <section id="hero">
             <video autoplay muted loop playsinline class="back-video">
-                <source src="assets/images/Home-Maxs Mining.webm" type="video/webm">
+                <source src="assets/images/Home-Maxs-Mining.webm" type="video/webm">
             </video>
-
             <div class="overlay"></div>
 
-            <div class="hero-content">
+            <div class="hero-content top-bold">
                 <h2>FORGING THE FUTURE OF <br>MINING IN SIERRA LEONE</h2>
                 <p>Top-tier machinery and mineral extraction services tailored for excellence.</p>
                 <div class="hero-btns">
@@ -55,6 +53,56 @@
             <div class="container">
                 <h3>Reliability Meets Power</h3>
                 <p>From gold and diamond mining to heavy-duty excavator rentals, we provide the backbone for your industrial success.</p>
+            </div>
+        </section>
+
+        <section id="sectors">
+            <div class="sector-container">
+                <a href="html/machinery.html" class="sector-card main-sector">
+                    <img src="assets/images/heavy-machinery1.jpg" alt="Heavy Machinery">
+                    <div class="sector-info">
+                        <h3>HEAVY MACHINERY</h3>
+                        <p>ARTICULATED TRUCKS | DOZERS | EXCAVATORS | E.T.C</p>
+                    </div>
+                </a>
+
+                <div class="sector-subgrid">
+                    <a href="html/machinery.html" class="sector-card">
+                        <img src="assets/images/demo-recycle.jpg" alt="Demolition & Recycling">
+                        <div class="sector-info">
+                            <h4>DEMOLITION & RECYCLING</h4>
+                            <p>HIGH REACH | SCRAP PROCESSING | MATERIAL HANDLERS</p>
+                        </div>
+                    </a>
+                    <a href="html/machinery.html" class="sector-card">
+                        <img src="assets/images/attachments.jpg" alt="Attachments & Tools">
+                        <div class="sector-info">
+                            <h4>ATTACHMENTS & WORK TOOLS</h4>
+                            <p>SHEARS | GRAPPLES | HAMMERS | BUCKETS | E.T.C</p>
+                        </div>
+                    </a>
+                    <a href="html/machinery.html" class="sector-card">
+                        <img src="assets/images/rentals-banner.png" alt="Machinery Rentals">
+                        <div class="sector-info">
+                            <h4>MACHINERY RENTALS</h4>
+                            <p>HEAVY MACHINERY FLEET</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <section id="sales-summary">
+            <div class="summary-container">
+                <div class="summary-img">
+                    <img src="assets/images/excavator.jpg" alt="Excavator at work">
+                </div>
+                <div class="summary-text">
+                    <h3>HEAVY MACHINERY SALES & RENTALS</h3>
+                    <p>MAX’S PRECIOUS MINERALS is a heavy equipment dealership engaged in: buying, selling, & renting heavy earthmoving and construction machinery. With extensive experience in the industry, we have earned the trust of thousands of repeat customers worldwide.</p>
+                    <p>With over 300 machines in stock coupled with our 12-bay workshop dedicated solely to maintaining our rental fleet and reconditioning our machines, you will find the quality of our fleet is second to none. Buying or renting from Max's is your assurance of receiving quality used equipment at attractive prices.</p>
+                    <a href="html/machinery.html" class="btn primary">View Full Catalog</a>
+                </div>
             </div>
         </section>
     </main>
